[M77] Revert "Refactor the rest of inspector tools"
This reverts commit 92e869a637824a506eec4cee09d452dacaad3423.

Reason for revert: crbug/1142624

Original change's description:
> Refactor the rest of inspector tools
>
> The CL refactors screenshot, paused and viewport size tools to use the
> base class and avoid using global variables.
>
> Bug: 1131801
> Change-Id: Iab857ec766d6634bdc03bdf4f560eee80c4a14da
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/2436737
> Reviewed-by: Mathias Bynens <mathias@chromium.org>
> Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

TBR=mathias@chromium.org,alexrudenko@chromium.org,patrick.brosset@microsoft.com

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: 1131801
Change-Id: I746ec3386af6b7f19672734ba08749f77b6e6a42

--- a/inspector_overlay/debug/tool_paused.html
+++ b/inspector_overlay/debug/tool_paused.html
@@ -15,9 +15,9 @@
 <body>
   <script type="module">
     function test() {
-      dispatch(["setPlatform", "mac"]);
-      dispatch(["reset"]);
-      dispatch(["drawPausedInDebuggerMessage", "test text"]);
+      setPlatform("mac");
+      reset(window);
+      drawPausedInDebuggerMessage("test text");
     }
     test();
   </script>
