--- a/inspector_overlay/debug/tool_screenshot.html
+++ b/inspector_overlay/debug/tool_screenshot.html
@@ -15,8 +15,8 @@
 <body>
   <script type="module">
     function test() {
-      dispatch(["setPlatform", "mac"]);
-      dispatch(["reset"]);
+      setPlatform("mac");
+      reset(window);
     }
     test();
   </script>
