--- a/inspector_overlay/debug/tool_viewport_size.html
+++ b/inspector_overlay/debug/tool_viewport_size.html
@@ -15,9 +15,9 @@ found in the LICENSE file.
 <body>
   <script type="module">
     function test() {
-      dispatch(["setPlatform", "mac"]);
-      dispatch(["reset"]);
-      dispatch(["drawViewSize"]);
+      setPlatform("mac");
+      reset(window);
+      drawViewSize();
     }
     test();
   </script>
