[M87] Revert "Refactor highlight and grid tools"
This reverts commit f4de8bffbcc6dc1a274c8fd2ee367c2de053ead7.

Reason for revert: crbug/1142624

Original change's description:
> Refactor highlight and grid tools
>
> Refactors overlay to avoid using global variables. Note: the grid
> label helpers still rely on a few global variables.
>
> Bug: 1131801
> Change-Id: Idb862c340cbc6c155549f2dfc0bdafdcadaee1ab
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/2429775
> Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
> Reviewed-by: Patrick Brosset <patrick.brosset@microsoft.com>
> Reviewed-by: Mathias Bynens <mathias@chromium.org>

TBR=mathias@chromium.org,alexrudenko@chromium.org,patrick.brosset@microsoft.com

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: 1131801
Change-Id: Ifc4250956c66447f2ce78f120d513c1b86a1c785

--- a/inspector_overlay/debug/tool_highlight_fullpage_grid.html
+++ b/inspector_overlay/debug/tool_highlight_fullpage_grid.html
@@ -17,21 +17,15 @@ found in the LICENSE file.
     const viewportWidth = document.documentElement.clientWidth;
     const viewportHeight = document.documentElement.clientHeight;
 
-    dispatch(["setPlatform", "mac"]);
-    dispatch(["reset", {
-      viewportSize: {
-        width: viewportWidth,
-        height: viewportHeight,
-      },
-      deviceScaleFactor: 1,
-      pageScaleFactor: 1,
-      pageZoomFactor: 1,
-      emulationScaleFactor: 1,
-      scrollX: 0,
-      scrollY: 0,
-    }]);
+    window.viewportSize = {
+      width: viewportWidth,
+      height: viewportHeight
+    };
 
-    dispatch(["drawHighlight", {
+    setPlatform("mac");
+    reset(window);
+
+    drawHighlight({
       "paths":[],
       "gridInfo":[
         {
@@ -46,7 +40,7 @@ found in the LICENSE file.
           "isPrimaryGrid":true
         }
       ]
-    }]);
+    });
   </script>
 </body>
 </html>
