--- a/inspector_overlay/debug/tool_highlight_subpixel_grid.html
+++ b/inspector_overlay/debug/tool_highlight_subpixel_grid.html
@@ -14,21 +14,15 @@ found in the LICENSE file.
 </head>
 <body>
   <script type="module">
-    dispatch(["setPlatform", "mac"]);
-    dispatch(["reset", {
-      viewportSize: {
-        width: document.documentElement.clientWidth,
-        height: document.documentElement.clientHeight
-      },
-      deviceScaleFactor: 1,
-      pageScaleFactor: 1,
-      pageZoomFactor: 1,
-      emulationScaleFactor: 1,
-      scrollX: 0,
-      scrollY: 0,
-    }]);
+    window.viewportSize = {
+      width: document.documentElement.clientWidth,
+      height: document.documentElement.clientHeight
+    };
 
-    dispatch(["drawHighlight", {
+    setPlatform("mac");
+    reset(window);
+
+    drawHighlight({
       "paths": [],
       "gridInfo": [
         {
@@ -45,7 +39,7 @@ found in the LICENSE file.
           "isPrimaryGrid":true
         }
       ]
-    }]);
+    });
   </script>
 </body>
 </html>
