--- a/inspector_overlay/debug/tool_highlight_narrow_tracks_grid.html
+++ b/inspector_overlay/debug/tool_highlight_narrow_tracks_grid.html
@@ -14,24 +14,10 @@ found in the LICENSE file.
 </head>
 <body>
   <script type="module">
-    const viewportWidth = document.documentElement.clientWidth;
-    const viewportHeight = document.documentElement.clientHeight;
+    setPlatform("mac");
+    reset(window);
 
-    dispatch(["setPlatform", "mac"]);
-    dispatch(["reset", {
-      viewportSize: {
-        width: viewportWidth,
-        height: viewportHeight,
-      },
-      deviceScaleFactor: 1,
-      pageScaleFactor: 1,
-      pageZoomFactor: 1,
-      emulationScaleFactor: 1,
-      scrollX: 0,
-      scrollY: 0,
-    }]);
-
-    dispatch(["drawHighlight", {
+    drawHighlight({
       "paths":[],
       "gridInfo":[
         {
@@ -48,7 +34,7 @@ found in the LICENSE file.
           "isPrimaryGrid":true
         }
       ]
-    }]);
+    });
   </script>
 </body>
 </html>
