--- a/inspector_overlay/debug/tool_highlight_flex.html
+++ b/inspector_overlay/debug/tool_highlight_flex.html
@@ -31,23 +31,19 @@ found in the LICENSE file.
       scrollY: 0,
     }]);
 
-    dispatch(["drawHighlight", {
-      "paths": [
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(111, 168, 220, .66)", "name": "content" },
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(147, 196, 125, .55)", "name": "padding" },
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(255, 229, 153, .66)", "name": "border" },
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(246, 178, 107, .66)", "name": "margin" }
-      ],
-      "flexInfo": [{
-        "containerBorder": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ],
-        "flexContainerHighlightConfig": {
-          "border": {
-            "color": "rgba(255, 0, 0, 1)",
-            "dotted": true,
-          }
-        }
-      }]
-    }]);
+    const response = { "paths": [ { "path": [ "M", 626.6666870117188, 291.3333435058594, "L", 926.6666870117188, 291.3333435058594, "L", 926.6666870117188, 591.3333740234375, "L", 626.6666870117188, 591.3333740234375, "Z" ], "fillColor": "rgba(255, 0, 0, 0)", "outlineColor": "rgba(128, 0, 0, 0)", "name": "content" }, { "path": [ "M", 626.6666870117188, 291.3333435058594, "L", 926.6666870117188, 291.3333435058594, "L", 926.6666870117188, 591.3333740234375, "L", 626.6666870117188, 591.3333740234375, "Z" ], "fillColor": "rgba(0, 255, 0, 0)", "name": "padding" }, { "path": [ "M", 626.6666870117188, 291.3333435058594, "L", 926.6666870117188, 291.3333435058594, "L", 926.6666870117188, 591.3333740234375, "L", 626.6666870117188, 591.3333740234375, "Z" ], "fillColor": "rgba(0, 0, 255, 0)", "name": "border" }, { "path": [ "M", 626.6666870117188, 291.3333435058594, "L", 1173.3333740234375, 291.3333435058594, "L", 1173.3333740234375, 591.3333740234375, "L", 626.6666870117188, 591.3333740234375, "Z" ], "fillColor": "rgba(255, 255, 255, 0)", "name": "margin" } ], "showRulers": true, "showExtensionLines": true, "showAccessibilityInfo": true, "colorFormat": "hex", "elementInfo": { "tagName": "div", "idValue": "test-multi-line-space", "nodeWidth": "300", "nodeHeight": "300", "isKeyboardFocusable": false, "accessibleName": "", "accessibleRole": "generic", "layoutObjectName": "LayoutNGFlexibleBox", "showAccessibilityInfo": true }, "flexInfo": [ { "containerBorder": [ "M", 626.6666870117188, 291.3333435058594, "L", 926.6666870117188, 291.3333435058594, "L", 926.6666870117188, 591.3333740234375, "L", 626.6666870117188, 591.3333740234375, "Z" ], "items": [ [ "M", 656.6666870117188, 352.3333435058594, "L", 736.6666870117188, 352.3333435058594, "L", 736.6666870117188, 371, "L", 656.6666870117188, 371, "Z" ], [ "M", 736.6666870117188, 352.3333435058594, "L", 816.6666870117188, 352.3333435058594, "L", 816.6666870117188, 371, "L", 736.6666870117188, 371, "Z" ], [ "M", 816.6666870117188, 352.3333435058594, "L", 896.6666870117188, 352.3333435058594, "L", 896.6666870117188, 371, "L", 816.6666870117188, 371, "Z" ], [ "M", 656.6666870117188, 432, "L", 736.6666870117188, 432, "L", 736.6666870117188, 450.66668701171875, "L", 656.6666870117188, 450.66668701171875, "Z" ], [ "M", 736.6666870117188, 432, "L", 816.6666870117188, 432, "L", 816.6666870117188, 450.66668701171875, "L", 736.6666870117188, 450.66668701171875, "Z" ], [ "M", 816.6666870117188, 432, "L", 896.6666870117188, 432, "L", 896.6666870117188, 450.66668701171875, "L", 816.6666870117188, 450.66668701171875, "Z" ], [ "M", 736.6666870117188, 511.66668701171875, "L", 816.6666870117188, 511.66668701171875, "L", 816.6666870117188, 530.3333740234375, "L", 736.6666870117188, 530.3333740234375, "Z" ] ], "lines": [ [ "M", 626.6666870117188, 352.3333435058594, "L", 926.6666870117188, 352.3333435058594, "L", 926.6666870117188, 371, "L", 626.6666870117188, 371, "Z" ], [ "M", 626.6666870117188, 432, "L", 926.6666870117188, 432, "L", 926.6666870117188, 450.66668701171875, "L", 626.6666870117188, 450.66668701171875, "Z" ], [ "M", 626.6666870117188, 511.66668701171875, "L", 926.6666870117188, 511.66668701171875, "L", 926.6666870117188, 530.3333740234375, "L", 626.6666870117188, 530.3333740234375, "Z" ] ], "flexContainerHighlightConfig": { "containerBorder": { "color": "rgba(255, 0, 0, 0)", "dashed": false, "dotted": false } } } ] };
+
+    // Massage the data a bit so we can see a nice flex overlay.
+    delete response.elementInfo;
+    response.showRulers = false;
+    response.showExtensionLines = false;
+    response.flexInfo[0].flexContainerHighlightConfig = {
+      "containerBorder": { "color": "rgba(255, 0, 0, 1)", "dashed": true, "dotted": false },
+      "itemSeparator": { "color": "rgba(0, 255, 0, 1)", "dashed": false, "dotted": true },
+      "lineSeparator": { "color": "rgba(0, 0, 255, 1)", "dashed": true, "dotted": false },
+    };
+
+    dispatch(["drawHighlight", response]);
   </script>
 </body>
 </html>
