Rename node-selected event to nodeSelected
We've since settled on camelCase for our custom events. I've filed
https://crbug.com/1145972 to track adding linting to enforce this.

Change-Id: I3e649b0ccc4df793a95af4c0326bad89ba36743d

--- a/front_end/component_docs/elements_breadcrumbs/basic.html
+++ b/front_end/component_docs/elements_breadcrumbs/basic.html
@@ -101,7 +101,7 @@
           selectedNode: bodyCrumb,
         };
 
-        component.addEventListener('node-selected', node => {
+        component.addEventListener('nodeSelected', node => {
           console.log('node selected', node);
         });
     }
