--- a/inspector_overlay/debug/tool_highlight_flex.html
+++ b/inspector_overlay/debug/tool_highlight_flex.html
@@ -31,23 +31,15 @@ found in the LICENSE file.
       scrollY: 0,
     }]);
 
-    dispatch(["drawHighlight", {
-      "paths": [
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(111, 168, 220, .66)", "name": "content" },
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(147, 196, 125, .55)", "name": "padding" },
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(255, 229, 153, .66)", "name": "border" },
-        { "path": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ], "fillColor": "rgba(246, 178, 107, .66)", "name": "margin" }
-      ],
-      "flexInfo": [{
-        "containerBorder": [ "M", 8, 8, "L", 1272, 8, "L", 1272, 26.666667938232422, "L", 8, 26.666667938232422, "Z" ],
-        "flexContainerHighlightConfig": {
-          "border": {
-            "color": "rgba(255, 0, 0, 1)",
-            "dotted": true,
-          }
-        }
-      }]
-    }]);
+    let response = { "highlight": { "paths": [ { "path": [ "M", 642, 694, "L", 1204, 694, "L", 1204, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ], "fillColor": "rgba(255, 0, 0, 0)", "outlineColor": "rgba(128, 0, 0, 0)", "name": "content" }, { "path": [ "M", 642, 694, "L", 1204, 694, "L", 1204, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ], "fillColor": "rgba(0, 255, 0, 0)", "name": "padding" }, { "path": [ "M", 642, 694, "L", 1204, 694, "L", 1204, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ], "fillColor": "rgba(0, 0, 255, 0)", "name": "border" }, { "path": [ "M", 642, 694, "L", 1204, 694, "L", 1204, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ], "fillColor": "rgba(255, 255, 255, 0)", "name": "margin" } ], "showRulers": true, "showExtensionLines": true, "showAccessibilityInfo": true, "colorFormat": "hex", "elementInfo": { "tagName": "div", "idValue": "test-out-of-flow-items", "nodeWidth": "562", "nodeHeight": "38.6667", "isKeyboardFocusable": false, "accessibleName": "", "accessibleRole": "generic", "layoutObjectName": "LayoutNGFlexibleBox", "showAccessibilityInfo": true }, "flexInfo": [ { "containerBorder": [ "M", 642, 694, "L", 1204, 694, "L", 1204, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ], "items": [ [ "M", 642, 694, "L", 692, 694, "L", 692, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ], [ "M", 692, 694, "L", 742, 694, "L", 742, 732.6666870117188, "L", 692, 732.6666870117188, "Z" ], [ "M", 742, 694, "L", 792, 694, "L", 792, 732.6666870117188, "L", 742, 732.6666870117188, "Z" ], [ "M", 792, 694, "L", 842, 694, "L", 842, 732.6666870117188, "L", 792, 732.6666870117188, "Z" ], [ "M", 842, 694, "L", 892, 694, "L", 892, 732.6666870117188, "L", 842, 732.6666870117188, "Z" ], [ "M", 892, 694, "L", 942, 694, "L", 942, 732.6666870117188, "L", 892, 732.6666870117188, "Z" ] ], "lines": [ [ "M", 642, 694, "L", 1204, 694, "L", 1204, 732.6666870117188, "L", 642, 732.6666870117188, "Z" ] ], "flexContainerHighlightConfig": { "containerBorder": { "color": "rgba(255, 0, 0, .5)", "pattern": "dashed" }, "lineSeparator": { "color": "rgba(255, 0, 0, .5)", "pattern": "dashed" }, "itemSeparator": { "color": "rgba(255, 0, 0, .5)", "pattern": "dotted" } } } ] } };
+
+    // Massage the data a bit so we can see a nice flex overlay.
+    response = response.highlight;
+    delete response.elementInfo;
+    response.showRulers = false;
+    response.showExtensionLines = false;
+
+    dispatch(["drawHighlight", response]);
   </script>
 </body>
 </html>
